--- a/ProyectoSeremi/src/app/components/header/header.component.scss
+++ b/ProyectoSeremi/src/app/components/header/header.component.scss
@@ -62,3 +62,51 @@
 .user-info span {
   font-size: 1.2vw; 
 }
+
+@media (max-width: 600px) {
+  .header-content {
+    flex-direction: row;
+    justify-content: space-between;
+    align-items: center;
+    height: auto;
+    padding: 0.5rem;
+    background-color: #d9d9d9; // gris claro como en la imagen
+  }
+
+  .left-image {
+    position: static;
+    margin-right: 0.5rem;
+  }
+
+  .user-info {
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+    background: transparent;
+    padding: 0;
+    font-size: 1rem;
+    width: auto;
+  }
+
+  .user-icon {
+    font-size: 4.5vw; 
+    color: black;
+    margin-right: 1vw; 
+  }
+
+  .user-info span {
+    font-size: 1.2vw; 
+  }
+
+  .home-button {
+    position: static;
+    transform: none;
+    background: transparent;
+    margin-left: auto;
+  }
+
+  .home-icon {
+    color: black;
+  }
+
+}
