--- a/ProyectoSeremi/src/app/pages/registro/registro.page.html
+++ b/ProyectoSeremi/src/app/pages/registro/registro.page.html
@@ -1,49 +1,58 @@
-<ion-content [fullscreen]="false">
-  <ion-header>
-    <ion-toolbar>
-      <ion-title>Registro</ion-title>
-    </ion-toolbar>
-  </ion-header>
+<ion-content [fullscreen]="true">
+  <div class="registro-wrapper">
 
-  <ion-list>
-    <ion-item>
-      <ion-label position="floating">RUT</ion-label>
-      <ion-input placeholder="Ingrese RUT"></ion-input>
-    </ion-item>
+    <div class="registro-formulario">
+      <label class="registro-label">Correo Electrónico</label>
+      <div class="campo">
+        <ion-input placeholder="*example@correo.com" type="email"></ion-input>
+      </div>
 
-    <ion-item>
-      <ion-label position="floating">Correo electrónico</ion-label>
-      <ion-input placeholder="Ingrese Correo" type="email"></ion-input>
-    </ion-item>
+      <label class="registro-label">Contraseña</label>
+      <div class="campo">
+        <ion-input placeholder="*Mínimo 8 caracteres, 2 números." type="password"></ion-input>
+      </div>
 
-    <ion-item>
-      <ion-label position="floating">Contraseña</ion-label>
-      <ion-input placeholder="Ingrese Contraseña" type="password"></ion-input>
-    </ion-item>
+      <label class="registro-label">Confirmar Contraseña</label>
+      <div class="campo">
+        <ion-input placeholder="*Mínimo 8 caracteres, 2 números." type="password"></ion-input>
+      </div>
 
-    <ion-item>
-      <ion-label position="floating">Región</ion-label>
-      <ion-input placeholder="Ingrese Región"></ion-input>
-    </ion-item>
+      <label class="registro-label">RUT</label>
+      <div class="campo">
+        <ion-input placeholder="*Ingresar RUT*" type="text"></ion-input>
+      </div>
 
-    <ion-item>
-      <ion-label position="floating">Comuna</ion-label>
-      <ion-input placeholder="Ingrese Comuna"></ion-input>
-    </ion-item>
+      <label class="registro-label">Región</label>
+      <div class="campo">
+        <ion-input placeholder="*Ingresar Región*" type="text"></ion-input>
+      </div>
 
-    <ion-item>
-      <ion-label position="floating">Dirección</ion-label>
-      <ion-input placeholder="Ingrese Dirección"></ion-input>
-    </ion-item>
-  </ion-list>
+      <label class="registro-label">Comuna</label>
+      <div class="campo">
+        <ion-input placeholder="*Ingresar Comuna*" type="text"></ion-input>
+      </div>
 
-  <div class="ion-padding">
-    <ion-button expand="block" (click)="irAInicioSesion()">
-      Registrarse
-    </ion-button>
+      <label class="registro-label">Dirección</label>
+      <div class="campo">
+        <ion-input placeholder="*Ingresar Dirección*" type="text"></ion-input>
+      </div>
 
-    <ion-button expand="block" fill="clear" (click)="irAInicioSesion()">
-      ¿Ya tienes cuenta? Inicia sesión
-    </ion-button>
+      <div class="extras">
+        <ion-checkbox></ion-checkbox>
+        <span>Aceptar términos y condiciones</span>
+
+        <div class="cuenta-existente">
+          <ion-button (click)="irAInicioSesion()">¿Ya tienes una cuenta?</ion-button>
+          <ion-icon name="return-up-back-outline"></ion-icon>
+        </div>
+      </div>
+
+      <ion-button class="btn-registrarse" expand="block" (click)="irAInicioSesion()">Registrarse</ion-button>
+    </div>
+
+    <div class="registro-titulo">
+      <h1>REGISTRO</h1>
+    </div>
+
   </div>
 </ion-content>
