--- a/ProyectoSeremi/src/app/components/header/header.component.html
+++ b/ProyectoSeremi/src/app/components/header/header.component.html
@@ -10,9 +10,8 @@
         <div class="user-info">
             <ion-button fill="clear" color="secondary" class="user-button" (click)="goToPerfil()">
                 <ion-icon name="person-circle" class="user-icon"></ion-icon>
-                <span>Hola, Nombre Apellido</span>
+                <span class="user-name">Hola, Nombre Apellido</span>
               </ion-button>
-              
         </div>
       </div>
     </ion-toolbar>
