--- a/ProyectoSeremi/src/app/components/header/header.component.scss
+++ b/ProyectoSeremi/src/app/components/header/header.component.scss
@@ -1,48 +1,51 @@
 .custom-header {
-    --background: #ccc;
-    padding: 0 10px;
-    position: relative;
-  }
-  
-  .header-content {
-    position: relative;
-    display: flex;
-    align-items: center;
-    justify-content: flex-end;
-    width: 100%;
-    height: 56px;
-  }
-  
-  .left-image {
-    position: absolute;
-    left: 17px;
-    height: 54px;
-    width: auto;
-  }
+  --background: #ccc;
+  height: 56px;
+}
 
-  .home-button {
-    position: absolute;
-    left: 50%;
-    transform: translateX(-50%); 
-    padding: 0;
-    background: transparent;
-    border: none;
-  }
-  
-  .home-icon {
-    font-size: 24px; 
-    color: black;
-  }
-  
+.header-content {
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+  width: 100%;
+  position: relative;
+  height: 56px;
+  padding: 0 0rem;
+}
+
+/* Logo a la izquierda */
+.left-image {
+  height: 56px;
+  width: auto;
+}
+
+/* Casita al centro absoluto */
+.home-button {
+  position: fixed;
+  left: 50%;
+  transform: translateX(-50%);
+  background: transparent;
+  border: none;
+}
+
+.home-icon {
+  font-size: 26px;
+  color: black;
+}
+
+/* Perfil a la derecha en recuadro */
 .user-info {
   display: flex;
   align-items: center;
   background-color: white;
-  padding: 1vh 2vw; 
-  border-radius: 20px;
-  font-size: 3vw; 
-  width: 30vw; 
-  max-width: 400px; 
+  padding: 0rem 0rem;
+  border-radius: 300px;
+  font-size: 0.95rem;
+  max-width: 30vw;
+  height: auto;
+  white-space: nowrap;
+  overflow: hidden;
+  margin-right: 0.50rem;
 }
 
 .user-button {
@@ -50,63 +53,39 @@
   align-items: center;
   background: transparent;
   border: none;
-  padding: 0;
+  //padding: 0;
+  justify-content: flex-start;
+  width: 100%;
+  border-radius: inherit;
+  overflow: hidden;
 }
 
 .user-icon {
-  font-size: 4.5vw; 
+  font-size: 45px;
   color: black;
-  margin-right: 1vw; 
+  //margin-right: 1vw;
 }
 
-.user-info span {
-  font-size: 1.2vw; 
+
+.user-name {
+  font-size: 1rem;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
 }
 
 @media (max-width: 600px) {
-  .header-content {
-    flex-direction: row;
-    justify-content: space-between;
-    align-items: center;
-    height: auto;
-    padding: 0.5rem;
-    background-color: #d9d9d9; // gris claro como en la imagen
-  }
 
-  .left-image {
-    position: static;
-    margin-right: 0.5rem;
+  .user-name {
+    display: none;
   }
 
   .user-info {
-    display: flex;
-    flex-direction: row;
-    align-items: center;
-    background: transparent;
-    padding: 0;
-    font-size: 1rem;
-    width: auto;
+    padding: 0.5rem;
+    max-width: none;
   }
 
   .user-icon {
-    font-size: 4.5vw; 
-    color: black;
-    margin-right: 1vw; 
+    font-size: 26px;
   }
-
-  .user-info span {
-    font-size: 1.2vw; 
-  }
-
-  .home-button {
-    position: static;
-    transform: none;
-    background: transparent;
-    margin-left: auto;
-  }
-
-  .home-icon {
-    color: black;
-  }
-
 }
