--- a/ProyectoSeremi/src/app/pages/actividades/actividades.page.scss
+++ b/ProyectoSeremi/src/app/pages/actividades/actividades.page.scss
@@ -3,34 +3,38 @@
   padding: 1rem;
   max-width: 900px;
   margin: 0 auto;
+  top: 65px;
 }
 
 h1 {
   font-size: 2rem;
   font-weight: bold;
   margin-bottom: 1rem;
+  color: black;
 }
 
 .lista-actividades {
   display: flex;
   flex-direction: column;
-  gap: 10%;
+  gap: 1rem;
   background-color: #f4f4f4;
-  padding: 5%;
+  padding: 1rem;
   border-radius: 8px;
-  
 }
 
 .actividad-btn {
   --background: #d9d9d9;
   --color: black;
+  --pading-start: 1rem;
+  --pading-end: 1rem;
+  --pading-top: 1rem;
+  --pading-bottom: 1rem;
   text-align: left;
   white-space: normal;
   border-radius: 6px;
-  font-size: 100%;
-  padding: 2%;
+  font-size: 1rem;
+  justify-content: flex-start;
   text-transform: none;
-  font-family: 'Roboto', sans-serif;
 }
 
 // Botones inferiores
@@ -64,7 +68,7 @@ h1 {
 }
 
 @media (max-width: 500px) {
-  F
+  
   .crear-actividad-btn {
     font-size: 0.8rem;
     padding: 0.4rem 0.6rem;
