--- a/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
+++ b/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
@@ -1,20 +1,28 @@
 <ion-content>
+  <div class="charlas-container">
+    <h1>Charlas</h1>
 
-    <div class="charlas-container">
-      
-      <h1>Charlas</h1>
-  
-      <div class="lista-charlas">
-        <button class="charla-btn" (click)="goToCharla()">12/5 - Charla con Colegio nuestro fundador del prado</button>
-        <button class="charla-btn">17/5 - Charla con Universidad los santos</button>
-        <button class="charla-btn">20/5 - Charla con Colegio Santo Hideo</button>
-        <button class="charla-btn">22/5 - Charla con Colegio monjas del monte</button>
-      </div>
-  
-      <button class="volver-btn" (click)="goToMenu()">Volver al menú</button>
-      <button class="crear-charla-btn">Crear Charla Nueva</button>
-      
+    <div class="lista-charlas">
+      <ion-button expand="block" fill="clear" class="charla-btn" (click)="goToCharla()">
+        12/5 - Charla con Colegio nuestro fundador del prado
+      </ion-button>
+      <ion-button expand="block" fill="clear" class="charla-btn">
+        17/5 - Charla con Universidad los santos
+      </ion-button>
+      <ion-button expand="block" fill="clear" class="charla-btn">
+        20/5 - Charla con Colegio Santo Hideo
+      </ion-button>
+      <ion-button expand="block" fill="clear" class="charla-btn">
+        22/5 - Charla con Colegio monjas del monte
+      </ion-button>
     </div>
-  
-  </ion-content>
-  
+
+    <ion-button class="volver-btn" (click)="goToMenu()">
+      Volver al menú
+    </ion-button>
+
+    <ion-button class="crear-charla-btn">
+      Crear Charla Nueva
+    </ion-button>
+  </div>
+</ion-content>
