--- a/ProyectoSeremi/src/app/pages/seleccionar-archivo/seleccionar-archivo.page.html
+++ b/ProyectoSeremi/src/app/pages/seleccionar-archivo/seleccionar-archivo.page.html
@@ -1,15 +1,21 @@
-<div class="seleccionar-archivo-container">
-  <h2>Presentaciones asignadas</h2>
+<div class="contenedor">
+  <h2>Archivos asignadas</h2>
 
-  <div class="archivo-card">
-    <div class="info-archivo">
-      <span class="icono-archivo">📄</span>
-      <span class="nombre-archivo">Efectos_del_cigarro_en_pulmones.pdf</span>
+  <div class="lista">
+    <div class="item" *ngFor="let archivos of archivos">
+      <div class="nombre">
+        <ion-icon name="document-text-outline"></ion-icon>
+        {{ archivos.nombre }}
+      </div>
+      <ion-button fill="clear" shape="round" size="small" (click)="abrirArchivo()">
+        <ion-icon name="caret-forward-circle" slot="icon-only"></ion-icon>
+      </ion-button>
+      
     </div>
-    <button class="btn-play" (click)="abrirArchivo()">
-      ▶
-    </button>
   </div>
 
-  <button class="btn-volver"(click)="goToCharlaEspecifica()">Volver a charla</button>
+  <ion-button expand="block" class="volver" (click)="goToCharlaEspecifica()">
+    Volver a charla
+  </ion-button>
+  
 </div>
