--- a/ProyectoSeremi/src/app/pages/editar-charla-especifica/editar-charla-especifica.page.html
+++ b/ProyectoSeremi/src/app/pages/editar-charla-especifica/editar-charla-especifica.page.html
@@ -3,7 +3,7 @@
 
     <!-- SIDEBAR IZQUIERDO: sólo título y “Volver” -->
     <aside class="charla-sidebar-left">
-      <div class="titulo-editor">Editor Charla</div>
+      <div class="titulo-editor">Editar Charla</div>
       <ion-button class="btn-volver" (click)="volver()">Volver a Charla</ion-button>
     </aside>
 
