--- a/ProyectoSeremi/src/app/pages/editar-charla-especifica/editar-charla-especifica.page.scss
+++ b/ProyectoSeremi/src/app/pages/editar-charla-especifica/editar-charla-especifica.page.scss
@@ -41,6 +41,7 @@ ion-content.principal-content {
     --color: #fff;
     --border-radius: 6px;
     text-transform: none;
+    padding-bottom: 1.8rem;
   }
 }
 
