Creación de página registrar charla nueva
Se crea página registrar charla nueva.

--- a/ProyectoSeremi/src/app/pages/anadir-actividad-a-charla/anadir-actividad-a-charla.page.html
+++ b/ProyectoSeremi/src/app/pages/anadir-actividad-a-charla/anadir-actividad-a-charla.page.html
@@ -25,7 +25,7 @@
     </div>
   </div>
 
-  <ion-button expand="block" class="volver" (click)="goToCharlaEspecifica()">
+  <ion-button expand="block" class="volver" (click)="volver()">
     Volver a charla
   </ion-button>
 </div>
