--- a/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
+++ b/ProyectoSeremi/src/app/pages/actividades/actividades.page.html
@@ -14,11 +14,11 @@
         
     </div>
 
-    <ion-button class="volver-btn" (click)="goToPrincipal()" shape="round">
+    <ion-button class="volver-btn" (click)="goToPrincipal()">
       Volver al menú
     </ion-button>
 
-    <ion-button class="crear-actividad-btn" (click)="irACrearActividad()" shape="round">
+    <ion-button class="crear-actividad-btn" (click)="irACrearActividad()">
       Crear Actividad Nueva
     </ion-button>
 
