--- a/ProyectoSeremi/src/app/pages/editar-perfil/editar-perfil.page.html
+++ b/ProyectoSeremi/src/app/pages/editar-perfil/editar-perfil.page.html
@@ -1,13 +1,78 @@
-<ion-header [translucent]="true">
-  <ion-toolbar>
-    <ion-title>editarPerfil</ion-title>
-  </ion-toolbar>
-</ion-header>
+<ion-content class="editar-perfil-background" fullscreen>
+  <div *ngIf="completado">
+    <div class="editar-perfil-container">
+      <div class="editar-perfil-header">
+        <ion-icon name="person-circle-outline" class="perfil-icon"></ion-icon>
+        <h1>Editar Perfil</h1>
+      </div>
 
-<ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">editarPerfil</ion-title>
-    </ion-toolbar>
-  </ion-header>
+      <ion-grid>
+        <ion-row>
+          <ion-col size="12" size-md="6">
+            <ion-item>
+              <ion-label position="stacked">RUT</ion-label>
+              <ion-input placeholder="12.345.678-9" type="text"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size="12" size-md="6">
+            <ion-item>
+              <ion-label position="stacked">Región</ion-label>
+              <ion-select placeholder="Selecciona una región">
+                <ion-select-option value="rm">Región Metropolitana</ion-select-option>
+                <ion-select-option value="v">Valparaíso</ion-select-option>
+              </ion-select>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col size="12" size-md="6">
+            <ion-item>
+              <ion-label position="stacked">Comuna</ion-label>
+              <ion-input placeholder="Ej: Santiago" type="text"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size="12" size-md="6">
+            <ion-item>
+              <ion-label position="stacked">Dirección</ion-label>
+              <ion-input placeholder="Ej: Av. Siempre Viva 123" type="text"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+
+        <ion-row>
+          <ion-col size="12" size-md="6">
+            <ion-item>
+              <ion-label position="stacked">Correo electrónico</ion-label>
+              <ion-input placeholder="Ej: ejemplo@email.com" type="email"></ion-input>
+            </ion-item>
+          </ion-col>
+
+          <ion-col size="12" size-md="6">
+            <ion-item>
+              <ion-label position="stacked">Contraseña</ion-label>
+              <ion-input placeholder="********" type="password"></ion-input>
+            </ion-item>
+          </ion-col>
+        </ion-row>
+      </ion-grid>
+
+      <ion-button expand="block" class="boton-guardar" (click)="apretarCompletar()">
+        Guardar Cambios
+      </ion-button>
+    </div>
+  </div>
+
+    <div *ngIf="completado === false" class="exitosa" >
+      <p>Actividad realizada de manera exitosa.</p>
+    </div>
+
+
+    <!-- Botón volver dentro del flujo scroll -->
+    <ion-button class="boton-volver" (click)="irAPerfil()">
+      Volver a Perfil
+    </ion-button>
+
 </ion-content>
