--- a/ProyectoSeremi/src/app/pages/ver-perfil/ver-perfil.page.html
+++ b/ProyectoSeremi/src/app/pages/ver-perfil/ver-perfil.page.html
@@ -1,4 +1,4 @@
-<ion-content class="perfil-background">
+<ion-content class="perfil-background" fullscreen>
   <div class="perfil-container">
     <div class="perfil-header">
       <ion-icon name="person-circle-outline" class="perfil-icon"></ion-icon>
@@ -7,14 +7,14 @@
 
     <ion-grid>
       <ion-row>
-        <ion-col size="6">
+        <ion-col size="12" size-md="6">
           <div class="campo">
             <label class="campo-label">RUT</label>
             <p class="campo-valor">12.345.678-9</p>
           </div>
         </ion-col>
 
-        <ion-col size="6">
+        <ion-col size="12" size-md="6">
           <div class="campo">
             <label class="campo-label">Región</label>
             <p class="campo-valor">Región Metropolitana</p>
@@ -23,14 +23,14 @@
       </ion-row>
 
       <ion-row>
-        <ion-col size="6">
+        <ion-col size="12" size-md="6">
           <div class="campo">
             <label class="campo-label">Comuna</label>
             <p class="campo-valor">Santiago</p>
           </div>
         </ion-col>
 
-        <ion-col size="6">
+        <ion-col size="12" size-md="6">
           <div class="campo">
             <label class="campo-label">Dirección</label>
             <p class="campo-valor">Av. Siempre Viva 123</p>
@@ -39,14 +39,14 @@
       </ion-row>
 
       <ion-row>
-        <ion-col size="6">
+        <ion-col size="12" size-md="6">
           <div class="campo">
             <label class="campo-label">Correo electrónico</label>
             <p class="campo-valor">correoejemplo.com</p>
           </div>
         </ion-col>
 
-        <ion-col size="6">
+        <ion-col size="12" size-md="6">
           <div class="campo">
             <label class="campo-label">Contraseña</label>
             <p class="campo-valor">********</p>
@@ -55,13 +55,12 @@
       </ion-row>
     </ion-grid>
 
-    <ion-button class="boton-editar" (click)="irAEditarPerfil()">
+    <ion-button expand="block" class="boton-editar" (click)="irAEditarPerfil()">
       Editar Perfil
     </ion-button>
-  </div>
 
-  <!-- Botón volver -->
-  <ion-button class="boton-volver" (click)="irAMenu()">
-    Volver a Menú
-  </ion-button>
+    <ion-button expand="block" class="boton-volver" (click)="irAMenu()">
+      Volver a Menú
+    </ion-button>
+  </div>
 </ion-content>
