Botón de regreso
Se refina el botón utilizado en algunas páginas como asignar actividad y archivos para que pueda volver a la pagina correspondiente.

--- a/ProyectoSeremi/src/app/pages/anadir-orador/anadir-orador.page.html
+++ b/ProyectoSeremi/src/app/pages/anadir-orador/anadir-orador.page.html
@@ -17,7 +17,7 @@
 
   </div>
 
-  <ion-button fill="clear" class="btn-volver" (click)="onVolver()">
+  <ion-button fill="clear" class="btn-volver" (click)="volver()">
     Volver a charla
   </ion-button>
 </ion-content>
