--- a/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
+++ b/ProyectoSeremi/src/app/pages/charlas/charlas.page.html
@@ -5,16 +5,24 @@
       <h1>Charlas</h1>
   
       <div class="lista-charlas">
-        <button class="charla-btn" (click)="goToCharla()">12/5 - Charla con Colegio nuestro fundador del prado</button>
-        <button class="charla-btn">17/5 - Charla con Universidad los santos</button>
-        <button class="charla-btn">20/5 - Charla con Colegio Santo Hideo</button>
-        <button class="charla-btn">22/5 - Charla con Colegio monjas del monte</button>
+
+        <ion-button expand="block" fill="solid" class="charla-btn" (click)="goToCharla()"> 12/5 - Charla con Colegio nuestro fundador del prado </ion-button>
+
+        <ion-button expand="block" fill="solid" class="charla-btn"> 17/5 - Charla con Universidad los santos </ion-button>
+
+        <ion-button expand="block" fill="solid" class="charla-btn"> 20/5 - Charla con Colegio Santo Hideo </ion-button>
+
+        <ion-button expand="block" fill="solid" class="charla-btn"> 22/5 - Charla con Colegio monjas del monte </ion-button>
+
       </div>
   
-      <button class="volver-btn" (click)="goToMenu()">Volver al menú</button>
-      <button class="crear-charla-btn">Crear Charla Nueva</button>
-      
+      <ion-button class="volver-btn" (click)="goToMenu()">
+        Volver al menú
+      </ion-button>
+
+      <ion-button class="crear-charla-btn" (click)="goToCrearCharla()">
+        Crear Charla Nueva
+      </ion-button>
+
     </div>
-  
   </ion-content>
-  
