--- a/ProyectoSeremi/src/app/pages/registrar-charla-nueva/registrar-charla-nueva.page.scss
+++ b/ProyectoSeremi/src/app/pages/registrar-charla-nueva/registrar-charla-nueva.page.scss
@@ -36,11 +36,12 @@ ion-content.principal-content {
     }
   
     .btn-volver {
-      margin-top: auto;
-      --background: #2f3542;
-      --color: #fff;
-      --border-radius: 6px;
-      text-transform: none;
+    margin-top: auto;
+    --background: #2f3542;
+    --color: #fff;
+    --border-radius: 6px;
+    text-transform: none;
+    padding-bottom: 1.8rem;
     }
   }
   
