--- a/ProyectoSeremi/src/app/pages/anadir-archivo-a-charla/anadir-archivo-a-charla.page.html
+++ b/ProyectoSeremi/src/app/pages/anadir-archivo-a-charla/anadir-archivo-a-charla.page.html
@@ -1,31 +1,33 @@
-<div class="contenedor">
-  <h2>Archivos seleccionados</h2>
-  <div class="lista">
-    <div class="item" *ngFor="let archivo of archivosSeleccionados">
-      <div class="nombre">
-        <ion-icon name="document-text-outline"></ion-icon>
-        {{ archivo.nombre }}
+<ion-content class="contenedor">
+  <div class="scrollable">
+    <h2>Archivos seleccionados</h2>
+    <div class="lista">
+      <div class="item" *ngFor="let archivo of archivosSeleccionados">
+        <div class="nombre">
+          <ion-icon name="document-text-outline"></ion-icon>
+          {{ archivo.nombre }}
+        </div>
+        <ion-button fill="clear" shape="round" size="small" (click)="quitarArchivo(archivo)">
+          <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
+        </ion-button>
       </div>
-      <ion-button fill="clear" shape="round" size="small" (click)="quitarArchivo(archivo)">
-        <ion-icon name="trash-outline" slot="icon-only"></ion-icon>
-      </ion-button>
+    </div>
+
+    <h2>Archivos por añadir</h2>
+    <div class="lista">
+      <div class="item" *ngFor="let archivo of archivosDisponibles">
+        <div class="nombre">
+          <ion-icon name="document-text-outline"></ion-icon>
+          {{ archivo.nombre }}
+        </div>
+        <ion-button fill="clear" shape="round" size="small" (click)="agregarArchivo(archivo)">
+          <ion-icon name="add-circle-outline" slot="icon-only"></ion-icon>
+        </ion-button>
+      </div>
     </div>
   </div>
 
-  <h2>Archivos por añadir</h2>
-  <div class="lista">
-    <div class="item" *ngFor="let archivo of archivosDisponibles">
-      <div class="nombre">
-        <ion-icon name="document-text-outline"></ion-icon>
-        {{ archivo.nombre }}
-      </div>
-      <ion-button fill="clear" shape="round" size="small" (click)="agregarArchivo(archivo)">
-        <ion-icon name="add-circle-outline" slot="icon-only"></ion-icon>
-      </ion-button>
-    </div>
-  </div>
-
-  <ion-button expand="block" class="volver" (click)="goToCharlaEspecifica()">
+  <ion-button expand="block" class="volver" (click)="volver()">
     Volver a charla
   </ion-button>
-</div>
+</ion-content>
