--- a/ProyectoSeremi/src/app/pages/anadir-archivo-a-charla/anadir-archivo-a-charla.page.scss
+++ b/ProyectoSeremi/src/app/pages/anadir-archivo-a-charla/anadir-archivo-a-charla.page.scss
@@ -1,6 +1,18 @@
-.contenedor {
-  padding: 5rem 2rem 2rem 2rem;
+ion-content.contenedor {
+  --padding-top: 5rem;
+  --padding-left: 2rem;
+  --padding-right: 2rem;
+  --padding-bottom: 2rem;
   text-align: center;
+  display: flex;
+  flex-direction: column;
+
+  .scrollable {
+    flex-grow: 1;
+    overflow-y: auto;
+    max-height: 60vh;
+    padding-right: 0.5rem;
+  }
 
   h2 {
     color: #000;
@@ -15,7 +27,7 @@
     border-radius: 10px;
     padding: 1rem;
     max-width: 700px;
-    margin: 0 auto;
+    margin: 0 auto 2rem auto;
     display: flex;
     flex-direction: column;
     gap: 1rem;
@@ -28,7 +40,7 @@
     display: flex;
     justify-content: space-between;
     align-items: center;
-  
+
     .nombre {
       flex-grow: 1;
       overflow: hidden;
@@ -36,9 +48,9 @@
       white-space: nowrap;
       font-weight: 500;
       color: #000;
-      margin-right: 1rem; 
+      margin-right: 1rem;
     }
-  
+
     ion-button {
       --padding-start: 0;
       --padding-end: 0;
@@ -47,9 +59,9 @@
       width: 32px;
       height: 32px;
       min-width: 32px;
-  
+
       ion-icon {
-        font-size: 1.5rem; 
+        font-size: 1.5rem;
         color: #2f3542;
       }
     }
